--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,8 +9,9 @@ BBFILE_COLLECTIONS += "seeed-st-odyssey"
 BBFILE_PATTERN_seeed-st-odyssey = "^${LAYERDIR}/"
 BBFILE_PRIORITY_seeed-st-odyssey = "7"
 
-EULA_FILE_ST_seeed-st-odyssey = "${LAYERDIR}/conf/eula/${MACHINE}"
-EULA_FILE_ST_MD5SUM_seeed-st-odyssey = "8b505090fb679839cefbcc784afe8ce9"
+EULA_FILE_ST:stm32mp157c-odyssey = "${LAYERDIR}/conf/eula/${MACHINE}"
+EULA_FILE_ST_MD5SUM:stm32mp157c-odyssey = "8b505090fb679839cefbcc784afe8ce9"
+
 LICENSE_PATH += "${LAYERDIR}/files/licenses"
 
 LAYERVERSION_seeed-st-odyssey = "1"
